--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set input text
       id: set_text
-      run: echo "::set-output name=text::$(cat _site/index.html)"
+      run: echo "::set-output name=text::$(ls)"
     - name: Check spelling
       uses: mpokryva/spell-check-action@v1
       with:
