--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -11,6 +11,9 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6
+    - name: Install gems
+      run: bundle install
+      shell: bash
     - name: Build Jekyll site
       run: bundle exec jekyll build
       shell: bash
