--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -19,7 +19,7 @@ jobs:
       shell: bash
     - name: Set input text
       id: set_text
-      run: echo "::set-output name=text::$(ls)"
+      run: echo "::set-output name=text::$(cat _site/index.html)"
       shell: bash
     - name: Check spelling
       uses: mpokryva/spell-check-action@v1
