Use HTML as input... correctly

--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Check spelling
       uses: mpokryva/spell-check-action@v1
       with:
-        text: ${{steps.set_text.text}}
+        text: ${{ steps.set_text.outputs.text }}
