--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -11,9 +11,16 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6
-    - name: Install gems
-      run: bundle install
-      shell: bash
+    - uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+    - name: Bundle install
+      run: |
+        bundle config path vendor/bundle
+        bundle install --jobs 4 --retry 3
     - name: Build Jekyll site
       run: bundle exec jekyll build
       shell: bash
