Rework multiline string logic.

--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -26,7 +26,13 @@ jobs:
       shell: bash
     - name: Set input text
       id: set_text
-      run: echo "::set-env name=text::$(cat _site/index.html)"
+      run: |
+        content=$(cat _site/index.html)
+        content="${content//'%'/'%25'}"
+        content="${content//$'\n'/'%0A'}"
+        content="${content//$'\r'/'%0D'}" 
+        echo $content
+        echo "::set-env name=text::$content"
       shell: bash
     - name: Check spelling
       uses: mpokryva/spell-check-action@v1
