--- a/.github/workflows/spell-check.yml
+++ b/.github/workflows/spell-check.yml
@@ -24,8 +24,13 @@ jobs:
     - name: Build Jekyll site
       run: bundle exec jekyll build
       shell: bash
-    - name: Check spelling
-      uses: mpokryva/spell-check-action@v1
-      with:
-        check-file: "_site/index.html"
-        ignore-file: "ignore_dict.txt"
+    - name: Check spelling mistakes
+      run: |
+        diff=$(comm -23 <(cat ${{inputs.check-file}} | aspell list --mode=html | sort --unique) <(sort --unique ${{inputs.ignore-file}}))
+        echo $diff
+        if [[ $diff ]]; then
+          exit 1
+        else
+          exit 0
+        fi
+      shell: bash
